Stop breadcrumbs overflowing parent container.

--- a/server/static/wrstat/src/diskTree.css
+++ b/server/static/wrstat/src/diskTree.css
@@ -1,9 +1,10 @@
 #treeBreadcrumbs {
 	list-style: none;
 	padding: 0;
-	margin-bottom: 0;
+	margin: 0;
 	grid-row: 1;
 	grid-column: 1 / span 2;
+	width: calc(100% - 4em);
 }
 
 #treeBreadcrumbs li {
@@ -63,7 +64,7 @@
 	padding-left: 1em;
 	margin-top: 0.25em;
 	display: grid;
-	width: 100%;
+	width: calc(100% - 2em);
 	gap: 1em;
 	grid-template-columns: 1fr auto;
 	align-items: start;
